--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,23 @@
 		<version>1.4</version>
 	</dependency>
 	
+	<!-- protostuff -->
+	<dependency>
+	    <groupId>com.dyuproject.protostuff</groupId>
+	    <artifactId>protostuff-core</artifactId>
+	    <version>1.0.10</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.dyuproject.protostuff</groupId>
+	    <artifactId>protostuff-runtime</artifactId>
+	    <version>1.0.10</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.objenesis</groupId>
+	    <artifactId>objenesis</artifactId>
+	    <version>2.1</version>
+	</dependency>
+	
 	<!-- servlet -->
     <dependency>
         <groupId>javax.servlet</groupId>
